--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   ],
   "scripts": {
     "test": "ts-mocha ./test/**/*_test.ts",
-    "build": "rm -rf dist && tsc && rm -rf node_modules",
-    "generate-docs": "typedoc src"
+    "build": "rm -rf dist && tsc && rm -rf node_modules"
   },
   "author": "drstrnegth",
   "license": "MIT",
   "devDependencies": {
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "axios": "^0.25.0",
     "chai": "^4.3.6",
+    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
     "ts-mocha": "^9.0.2",
-    "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   }
 }
