--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-burp",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A library that convert axios object to burp-like repeater",
   "main": "dist/index.js",
   "private": false,
@@ -29,5 +29,16 @@
     "eslint-config-google": "^0.14.0",
     "ts-mocha": "^9.0.2",
     "typescript": "^4.5.5"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phvietan/axios-burp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/phvietan/axios-burp/issues"
+  },
+  "homepage": "https://github.com/phvietan/axios-burp#readme"
 }
