--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-burp",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A library that convert axios object to burp-like repeater",
   "main": "dist/index.js",
   "private": false,
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "ts-mocha ./test/**/*_test.ts",
     "build": "rm -rf dist && tsc && rm -rf node_modules",
-    "publish": "npm run build && npm publish"
+    "own:publish": "npm run build && npm publish"
   },
   "author": "drstrnegth",
   "license": "MIT",
